# src/app.js
@@ -6,17 +6,21 @@ const favicon = require("express-favicon");
 const logger = require("morgan");
 const cookieParser = require("cookie-parser");
 
-// api documentation: swagger
+// imports
+const activitiesRouter = require("./routes/activitiesRouter");
+const eventsRouter = require("./routes/eventsRouter");
+const groupsRouter = require("./routes/groupsRouter");
+const votesRouter = require("./routes/votesRouter");
+const authRouter = require("./routes/authRouter");
+
+const { authenticateUser } = require("./middleware/authHandler");
+
+// api documentation: swagger-ui
 const swaggerDocument = require("yamljs").load("./src/swagger.yaml");
 const swaggerUi = require("swagger-ui-express");
 
-// imports
-const testsRouter = require("./routes/testsRouter");
-const activitiesRouter = require("./routes/activitiesRouter");
-const authRouter = require("./routes/authRouter");
-const votesRouter = require("./routes/votesRouter");
-
 const { errorHandler, notFound } = require("./middleware/errorHandler");
+
 // middleware
 
 // we shall change the cors origin once the frontend is deployed
@@ -29,16 +33,18 @@ app.use(express.static("public"));
 app.use(favicon(path.join(__dirname, "/public/favicon.ico")));
 
 // routes
+
 app.get("/", (req, res) => {
   res.send(
-    '<h2>Go to API Documentation</h2><a href="/api-docs">Documentation</a>'
+    '<h2>Welcome to Data-Night API home page!</h2><a href="/api-docs">Documentation</a>'
   );
 });
 
 app.use("/api-docs", swaggerUi.serve, swaggerUi.setup(swaggerDocument));
 
-app.use("/api/v1", testsRouter);
 app.use("/api/v1/activities", activitiesRouter);
+app.use("/api/v1/events", authenticateUser, eventsRouter);
+app.use("/api/v1/groups", groupsRouter);
 app.use("/api/v1/auth", authRouter);
 app.use("/api/v1/votes", votesRouter);
 
