# src/models/Activity.js
@@ -1,44 +1,18 @@
-const Vote = require("./Vote");
 const mongoose = require("mongoose");
 
 const activitySchema = new mongoose.Schema(
   {
-    name: {
+    activity: {
       type: String,
-      required: [true, "please provide an activity name!"],
-      unique: true,
+      required: [true, "please provide a brief description for the activity!"],
     },
-    description: {
+    type: {
       type: String,
-      default: "a default activity description",
+      default: "a default activity type",
+      required: [true, "please provide a type for the activity!"],
     },
-    category: {
-      type: String,
-      enum: {
-        values: [
-          "relaxing",
-          "creative",
-          "social",
-          "educational",
-          "holiday",
-          "cultural",
-        ],
-        message:
-          "Invalid category type! Choose from ['relaxing', 'creative', 'social', 'educational', 'holiday', 'cultural']",
-      },
-      required: [true, "please provide a valid category!"],
-    },
-    vote: { type: mongoose.Schema.Types.ObjectId, ref: "Vote" },
   },
   { timestamps: true }
 );
-
-// Middleware to create a vote set to 0 before an activity is saved
-activitySchema.pre("save", async function (next) {
-  const newVote = new Vote({ activityID: this._id });
-  await newVote.save();
-  this.vote = newVote._id;
-  next();
-});
 
 module.exports = mongoose.model("Activity", activitySchema);
