# src/models/EventActivity.js
@@ -1,0 +1,23 @@
+const mongoose = require("mongoose");
+const Event = require("./Event");
+
+const eventActivitiesSchema = new mongoose.Schema(
+  {
+    eventID: {
+      type: mongoose.Schema.Types.ObjectId,
+      ref: "Event",
+    },
+    activity: {
+      type: String,
+      required: [true, "please provide a brief description for the activity!"],
+    },
+    type: {
+      type: String,
+      default: "a default activity type",
+    },
+    votes: [{ type: mongoose.Schema.Types.ObjectId, ref: "User" }],
+  },
+  { timestamps: true }
+);
+
+module.exports = mongoose.model("EventActivity", eventActivitiesSchema);
